# DeepSceneTextReader

./: .gitignore  CMakeLists.txt  README.md  ctc_scene_text_recognizer.cpp  ctc_scene_text_recognizer.h  detector.h  faster_rcnn_text_detector.cpp  faster_rcnn_text_detector.h  main.cpp  recognizer.h  scene_text_detector.cpp  scene_text_detector.h  scene_text_reader.cpp  scene_text_reader.h  scene_text_recognizer.cpp  scene_text_recognizer.h  text_box.cpp  text_box.h  utils.cpp  utils.h
cmake/Modules/: Eigen_VERSION.cmake  FindTensorFlow.cmake
